# arrow-wasm

./: .gitignore  Cargo.toml  Cargo.toml.d.ts  Readme.md  example.js  flights.js  index.html  index.js  index.ts  package.json  perf.js  ramsch.js  rollup.config.js
.github/: dependabot.yml
.github/workflows/: merge-dependabot.yml  test.yml
examples/: bench.js  crimes.js  flights.js  index.html  index_classic.html  index_web.html  package.json  ramsch.js  schema.js
src/: datatype.rs  field.rs  lib.rs  main.rs  record_batch.rs  schema.rs  table.rs  utils.rs  vector.rs
