[package]
name = "arrow_wasm"
version = "0.1.0"
authors = ["Dominik Moritz <domoritz@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "*"
arrow = {git = "https://github.com/apache/arrow"}
console_error_panic_hook = "*"
